chore: prepare for NPM and GitHub release
- Update package.json with complete NPM metadata
  - Bump version to 0.1.0
  - Add description, author, license, repository, keywords
  - Add engines, sideEffects, prepublishOnly script
  - Update files list to include LICENSE and CHANGELOG

- Add MIT LICENSE file

- Polish README.md for NPM landing page
  - Add badges (npm version, license, TypeScript)
  - Reorganize with Quick Start section
  - Add comprehensive API documentation for all methods
  - Add Storage Adapters section with examples
  - Add Error Handling section
  - Add Demo link

- Update CHANGELOG.md
  - Format according to Keep a Changelog
  - List all major features for 0.1.0 release

- Update .gitignore
  - Add *.local and .claude/ entries

- Remove internal documentation
  - Delete TESTS.md (internal spec)
  - Delete STYLE.md (internal guidelines)
  - Delete WORK_ORDER.md (internal planning)
  - Delete test.ts and index.html (dev files)

Package ready for publication:
- All 349 tests passing
- TypeScript declarations generated
- No console.log statements
- Linter passes
- Build succeeds
- Package tarball verified (42.3 kB unpacked)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,29 @@
 {
   "name": "@motioneffector/wiki",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "description": "A TypeScript library for creating and managing interconnected knowledge bases with bidirectional linking",
+  "author": "MotionEffector",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/motioneffector/wiki"
+  },
+  "homepage": "https://github.com/motioneffector/wiki#readme",
+  "bugs": {
+    "url": "https://github.com/motioneffector/wiki/issues"
+  },
+  "keywords": [
+    "wiki",
+    "knowledge-base",
+    "bidirectional-links",
+    "backlinks",
+    "note-taking",
+    "zettelkasten",
+    "worldbuilding",
+    "graph",
+    "linking",
+    "typescript"
+  ],
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -12,8 +35,15 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md",
+    "LICENSE",
+    "CHANGELOG.md"
   ],
+  "sideEffects": false,
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -21,7 +51,8 @@
     "test:run": "vitest run",
     "lint": "eslint src",
     "format": "prettier --write src",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prepublishOnly": "npm run test:run && npm run build"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
